--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,12 @@
 <header class="header">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 title-tagline">
                 <h1>LitRPG Library</h1>
                 <h4 class="tagline">Your LitRPG Companion: Discover, Save, and Review the Best in Fantasy Gaming!</h4>
+                <div>
+                    <a href="{% url 'account_signup' %}" class="btn btn-signup">Register</a>
+                </div>
             </div>
             <div class="col-md-6 header-video">
                 <video autoplay muted loop playsinline class="bg-video">
@@ -23,55 +26,55 @@
 <hr class="solid">
 <div class="container">
     <div class="row justify-content-center"">
-        <div class="col-sm-2">
-            <div class="card">
-                <div class="card-body index-card">
-                    <h5 class="card-title d-flex justify-content-between align-items-center">
-                        Add
-                        <i class="fas fa-book-open"></i>
-                    </h5>
-                    <p class="card-text">A book to the LitRPG Library.</p>
-                    <a href="{% url 'add_book' %}" class="btn btn-primary">Add Book</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            <div class="card">
-                <div class="card-body index-card">
-                    <h5 class="card-title d-flex justify-content-between align-items-center">
-                        Review
-                        <i class="fas fa-keyboard"></i>
-                    </h5>
-                    <p class="card-text">A book and add a rating.</p>
-                    <a href="{% url 'add_review' %}" class="btn btn-primary">Review</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            <div class="card index-card">
-                <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-between align-items-center">
-                        Comment
-                        <i class="fas fa-comments"></i>
-                    </h5>
-                    <p class="card-text">Add your voice to the discussion.</p>
-                    <a href="{% url 'review_list' %}" class="btn btn-primary">Reviw List</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-2">
-            <div class="card">
-                <div class="card-body index-card">
-                    <h5 class="card-title d-flex justify-content-between align-items-center">
-                        TBR List
-                        <i class="fas fa-list-alt"></i>
-                    </h5>
-                    <p class="card-text">Add books to your to be read list.</p>
-                    <a href="{% url 'tbr_list' %}" class="btn btn-primary">TBR List</a>
-                </div>
+        <div class=" col-sm-2">
+        <div class="card">
+            <div class="card-body index-card">
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    Add
+                    <i class="fas fa-book-open"></i>
+                </h5>
+                <p class="card-text">A book to the LitRPG Library.</p>
+                <a href="{% url 'add_book' %}" class="btn btn-primary">Add Book</a>
             </div>
         </div>
     </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body index-card">
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    Review
+                    <i class="fas fa-keyboard"></i>
+                </h5>
+                <p class="card-text">A book and add a rating.</p>
+                <a href="{% url 'add_review' %}" class="btn btn-primary">Review</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card index-card">
+            <div class="card-body">
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    Comment
+                    <i class="fas fa-comments"></i>
+                </h5>
+                <p class="card-text">Add your voice to the discussion.</p>
+                <a href="{% url 'review_list' %}" class="btn btn-primary">Reviw List</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-2">
+        <div class="card">
+            <div class="card-body index-card">
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    TBR List
+                    <i class="fas fa-list-alt"></i>
+                </h5>
+                <p class="card-text">Add books to your to be read list.</p>
+                <a href="{% url 'tbr_list' %}" class="btn btn-primary">TBR List</a>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 
