--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -10,14 +10,13 @@
     <div class="row g-0">
       <div class="col-md-6 masthead-text">
         <h1 class="post-title my-2 mx-2">{{ review.title }}: by {{ book.book_author }}</h1>
-        <p class="my-2 mx-2" style="color:#1f1d5e; font-weight:300px;">
+        <p class="my-2 mx-2" style="color:#1f1d5e; font-weight:300;">
           Review by: {{review.user}} |
           {% if review.updated_on and review.updated_on != review.created_on %}
           Updated on: {{ review.updated_on|date:"F j, Y" }}
           {% else %}
           Created on: {{ review.created_on|date:"F j, Y" }}
           {% endif %}
-        </p>
       </div>
       <div class="d-none d-md-block col-md-6 masthead-image">
       </div>
@@ -70,7 +69,7 @@
         {% endif %}
         <hr>
         <!-- Review Content -->
-        <p class="mt-3">{{ review.content | safe }}</p>
+        <p class="mt-3">{{ review.content | safe }}
         <div>
         {% if user == review.user %}
         <a href="{% url 'review_edit' slug=review.slug %}" class="btn btn-edit">Edit</a>
@@ -88,7 +87,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 
 <!-- Delete Confirmation Modal for Review -->
@@ -119,7 +117,7 @@
       <strong>
         <i class="far fa-comments"></i> {{ comment_count }} Comments
       </strong>
-      <hr />
+      <hr>
     </div>
   </div>
 
@@ -210,7 +208,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 
 {% endblock %}
